--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.testcontainers:postgresql:1.18.0'
+    testImplementation 'org.testcontainers:junit-jupiter:1.18.0'
 }
 
 tasks.named('test') {
